<?xml version="1.0" encoding="utf-8"?>
<!--
    date: 2023-06-08
    file: fragment_view2_land.xml
    author: Jaime Rump
    desc: Handles the layout for the View2Fragment landscape version
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View2Fragment">

    <TextView
        android:id="@+id/fragment2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragTitle2"
        android:textAlignment="center"
        android:textSize="10pt" />

    <LinearLayout
        android:id="@+id/horizontal_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/button_two_decimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="5pt"
            android:background="@color/darkgreen"
            android:layout_margin="5dp"
            android:text="0.00" />

        <Button
            android:id="@+id/button_three_decimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="5pt"
            android:background="@color/darkgreen"
            android:layout_margin="5dp"
            android:text="0.000" />

        <Button
            android:id="@+id/button_four_decimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="5pt"
            android:background="@color/darkgreen"
            android:layout_margin="5dp"
            android:text="0.0000" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_or_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="8pt"
        android:padding="5dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_custom_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decimal_custom"
        android:textSize="8pt"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textSize="8pt"/>

    <Button
        android:id="@+id/button_update_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/darkgreen"
     android:layout_gravity="center_horizontal"
        android:textSize="8pt"
        android:text="@string/update"/>
</LinearLayout>
